src/components/ArtCard/styles.module.scss
@import '../../styles/helpers.scss';

.artCard {
  position: relative;
  border: 1px solid $color-neutral-20;
  width: 100%;
  max-width: 500px;
  max-height: 500px;
  margin: 0 auto;
  height: 100%;
  border-radius: $border-radius;
  @include flexbox;
  flex-direction: column;
  &Medium {
    max-width: 402px;
  }

  transition: transform 0.4s ease, box-shadow 0.4s ease;
  &:hover {
    transform: translateY(-10px);
    box-shadow: 0 10px 12px rgba($color-neutral-80, 0.2);
  }
}

.tagContainer {
  position: absolute;

  padding: 16px;
  overflow-x: auto;
  width: inherit;

  @include flexbox(center, flex-start);

  &::-webkit-scrollbar {
    height: 0;
  }

  & > .tag {
    margin-bottom: 10px;

    &:not(:last-child) {
      margin-right: 10px;
    }
  }
}

.mainImageWrapperSmall {
  width: 100%;
}

.imageWrapper {
  overflow: hidden;
  flex: 0 1 80%;
  transition: $transition;
  width: 100%;
  height: 100%;
  border-radius: $border-radius $border-radius 0 0;
  @include flexbox(flex-start, center);

  .Padded,
  .Contained {
    object-fit: contain;
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 100%;
    align-self: center;
  }

  .Covered {
    object-fit: cover;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
  }

  // & > img {
  //   width: 100%;
  //   height: 100%;
  //   object-fit: cover;
  //   object-position: 50% 50%;
  //   transition: 0.1s linear;
  //   border-radius: $border-radius $border-radius 0 0;

  //   @include forDesktopSm {
  //     object-fit: contain;
  //   }
  // }
}

.mainImageWrapperMedium {
  display: block;
  width: 100%;
  height: 236px;
}

.secondaryImagesContainer {
  display: flex;
}

.secondaryImageWrapper {
  width: 134px;
  height: 81px;
}

.lastSecondaryImageWrapper {
  position: relative;
  filter: brightness(0.8);
}

.allArtNumber {
  position: absolute;
  top: 50%;
  left: 50%;

  display: block;

  transform: translate(-50%, -50%);
}

.artCardInfo {
  padding: 16px;
  width: 100%;
  line-height: 32px;
}

.flexContainer {
  @include flexbox(center, space-between);

  .artCardPrice {
    text-transform: uppercase;

    color: $color-actions-light-purple;
  }
}

.artCardAuthorContainer {
  padding: 10px 0 0 0;

  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: $color-neutral-20;
}

.artCardSmallLikes {
  margin-right: 8px;
}

.artCardAuthor {
  margin-left: 8px;

  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 200px;
}

.artCardHeart {
  margin-right: 5px;
  &Active {
    svg {
      path {
        fill: red;
      }
    }
  }
}

@include forTablet {
  .artCard {
    &Medium {
      width: unset;
    }
  }
  .mainImageWrapperMedium {
    width: 281px;
    height: 165px;
  }

  .secondaryImageWrapper {
    width: 94px;
    height: 57px;
  }
}

.bidText {
  color: $color-neutral-20;
  text-transform: none;
}

.bidder_avatars {
  @include flexbox(center, center);
  :not-first-child {
    margin-left: -10px;
  }
}

.bidder_avatar,
.author_avatar {
  width: 20px;
  height: 20px;
  object-fit: cover;
  border-radius: 50%;
}

